test/spec_vectors/local_set/fail/module_8.wat
(module (func $type-param-arg-num-vs-num (param f64 i64) (local.set 1 (f64.const 0))))